<resources>
    <string name="app_name">Retail Management</string>
    <string name="logo_image">Retail Management Logo</string>
    <string name="title">RETAIL MANAGEMENT</string>
    <string name="powered_by">Powered by Joao Osorio</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_password">Change password</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="new_order">NEW ORDER</string>
    <string name="users">USERS</string>
    <string name="products">PRODUCTS</string>
    <string name="operating_funds">OP. FUNDS</string>
    <string name="invoices">INVOICES</string>
    <string name="stores">STORES</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="click_here">Click Here.</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change">Change</string>
    <string name="confirm">Confirm</string>
    <string name="email_placeholder">Email here</string>
    <string name="nif_placeholder">NIF here</string>
    <string name="status_description">User status</string>
    <string name="update_description">Change content</string>
    <string name="my_profile">My Profile</string>
    <string name="number_label">Number:</string>
    <string name="no_content">No content</string>
    <string name="name_label">Name:</string>
    <string name="nif_label">NIF:</string>
    <string name="address_label">Address:</string>
    <string name="council_label">Council:</string>
    <string name="zip_code_label">Zip Code:</string>
    <string name="birth_date_label">Birth date:</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="category_label">Category:</string>
    <string name="store_label">Store:</string>
    <string name="status_label">Status:</string>
    <string name="add_float_button">Add content</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="employee">Employee</string>
    <string name="id_store">ID:</string>
    <string name="zip_code_store">Zip Code</string>
    <string name="address_store">Address</string>
    <string name="product_name">Name here</string>
    <string name="stock_placeholder">Stock</string>
    <string name="gross_price_placeholder">Gross Price</string>
    <string name="entry_label">Entry qty:</string>
    <string name="date_placeholder">dd-MM-yyyy</string>
    <string name="exit_label">Exit qty:</string>
    <string name="number">100</string>
    <string name="bill_description">Print bill</string>
    <string name="invoice_label">Invoice number</string>
    <string name="bill_placeholder">Order number</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="logout_message">Are you sure you want to sign out?</string>
    <string name="button_yes">YES</string>
    <string name="user_confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="register_name">Full name</string>
    <string name="next">NEXT</string>
    <string name="personal_data">Personal data</string>
    <string name="create">CREATE</string>
    <string name="new_product">New product</string>
    <string name="name">Name</string>
    <string name="qty">Quantity</string>
    <string name="change_product">Edit product</string>
    <string name="product_details">Product details</string>
    <string name="stock_label">Stock:</string>
    <string name="iva_label">IVA:</string>
    <string name="gross_price_label">Gross price:</string>
    <string name="taxed_price_label">Taxed price:</string>
    <string name="new_op_fund">New operating fund</string>
    <string name="entry_qty">Entry Quantity</string>
    <string name="exit_qty">Exit Quantity</string>
    <string name="date">Date</string>
    <string name="change_op_fund">Edit operating fund</string>
    <string name="cash_register_label">Cash Register:</string>
    <string name="date_label">Date:</string>
    <string name="invoice_details">Invoice details</string>
    <string name="invoice_number">Invoice number:</string>
    <string name="transaction_label">Transaction:</string>
    <string name="user_label">Employee:</string>
    <string name="products_label">Products:</string>
    <string name="total_no_iva_label">Total (no IVA):</string>
    <string name="total_iva_label">Total (IVA):</string>
    <string name="check_products">CHECK ORDERED PRODUCTS</string>
    <string name="new_invoice">New invoice</string>
    <string name="check_invoice">CHECK INVOICE</string>
    <string name="order_products">Products to order</string>
    <string name="order_product_name">Product name</string>
    <string name="add_symbol">+</string>
    <string name="cancel">CANCEL</string>
    <string name="add">Add</string>
    <string name="movement_in">IN</string>
    <string name="new_stock_movement">New movement</string>
    <string name="city_store">City</string>
    <string name="store_details">Store details</string>
    <string name="store_number">Store number:</string>
    <string name="contact_label">Contact:</string>
    <string name="new_store">New store</string>
    <string name="council_store">Council</string>
    <string name="contact_store">Contact</string>
    <string name="number_cash_registers">Number of cash registers</string>
    <string name="store">Store</string>
    <string name="number_cash_register_label">Cash registers:</string>
    <string name="cash_register">Cash Register</string>
    <string name="change_store">Edit store</string>
    <string name="change_employee">Edit employee</string>
    <string name="nif">NIF</string>
    <string name="birth_date">Birth Date</string>
    <string name="value_name_iva">Value Name</string>
    <string name="value_iva">Value</string>
    <string name="gross_price_product">GPrice: €</string>
    <string name="sub_total_no_iva">Tot (no IVA)</string>
    <string name="sub_total_iva">Tot (IVA)</string>
    <string name="iva_perc">IVA (%)</string>
    <string name="products_order">Order products</string>
    <string name="show_ordered">Show ordered products</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="ordered_products">ORDERED PRODUCTS</string>
    <string name="invoice">INVOICE</string>
    <string name="oops">Oops...</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_permisson">NO PERMISSIONS</string>
</resources>