<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/profileMenu"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="1"
        android:title="@string/menu_profile"
        app:showAsAction="never" />

    <item android:id="@+id/changePasswordMenu"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="2"
        android:title="@string/menu_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/signOutMenu"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/menu_sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/search_icon"
        android:title="Search"
        android:visible="false"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
</menu>