<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_light"
        android:layout_margin="4dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/nameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_centerVertical="true"
            android:textColor="@color/first_red"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/stockLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/nameCard"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/stock_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stockCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/stockLabel"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/stock_placeholder"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/grossPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockLabel"
            android:layout_toEndOf="@id/nameCard"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="5dp"
            android:text="@string/gross_price_product"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/grossPriceCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockCard"
            android:layout_toEndOf="@id/grossPriceLabel"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/gross_price_placeholder"
            android:paddingEnd="5dp"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/stockMovCardSuper"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/updateCard"
            android:contentDescription="@string/status_description"
            android:src="@drawable/stock_mov_icon" />

        <ImageView
            android:id="@+id/updateCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toStartOf="@id/removeCard"
            android:layout_centerVertical="true"
            android:src="@drawable/edit_icon"
            android:contentDescription="@string/update_description"/>

        <ImageView
            android:id="@+id/removeCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/status_description"
            android:src="@drawable/remove_icon" />

        <ImageView
            android:id="@+id/stockMovCardNormal"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/status_description"
            android:src="@drawable/stock_mov_icon"
            android:visibility="gone"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>