<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape_light"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/new_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/button_shape_circular"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/users"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newOrder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/button_shape_circular"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/products"
        android:textColor="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newOrder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/operatingFunds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="234dp"
        android:background="@drawable/button_shape_circular"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/operating_funds"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newOrder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/invoices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/button_shape_circular"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/invoices"
        android:textColor="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/products" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_shape_circular"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/stores"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users" />

</androidx.constraintlayout.widget.ConstraintLayout>