<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/idStore"
        android:text="@string/id_store"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/first_red"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/id_store" />


    <TextView
        android:id="@+id/addressStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/idStore"
        android:text="@string/address_store"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/zipCodeStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressStore"
        android:layout_toEndOf="@id/idStore"
        android:text="@string/zip_code_store"
        android:fontFamily="@font/montserrat_regular"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="12sp" />

</RelativeLayout>