<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_light"
        android:layout_margin="4dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/cityCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/city_store"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/addressCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_store"
            android:textColor="@color/first_red"
            android:fontFamily="@font/montserrat_bold"
            android:layout_toEndOf="@id/cityCard"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/zipCodeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressCard"
            android:layout_toEndOf="@id/cityCard"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/zip_code_store"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/updateCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toStartOf="@id/removeCard"
            android:layout_centerInParent="true"
            android:src="@drawable/edit_icon"
            android:contentDescription="@string/update_description"/>

        <ImageView
            android:id="@+id/removeCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/remove_icon"
            android:contentDescription="@string/update_description"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>