<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_light"
        android:layout_margin="4dp"
        android:padding="8dp">



        <TextView
            android:id="@+id/emailCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_placeholder"
            android:textColor="@color/first_red"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/nifCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailCard"
            android:hint="@string/nif_placeholder"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/statusCheckCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/updateCard"
            android:contentDescription="@string/status_description"
            android:src="@drawable/check_icon"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/statusUncheckCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/updateCard"
            android:contentDescription="@string/status_description"
            android:src="@drawable/remove_icon"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/updateCard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/edit_icon"
            android:contentDescription="@string/update_description"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>